# dev-bot

./: .secrets.baseline  Dockerfile  README.md  pyproject.toml
devbot/: devbot.py  oncall_manager.py
